==============================
Changes for Crate-Java-Testing
==============================

2023-10-04 0.11.0
=================

- Adapted the tarball extraction logic to handle newer CrateDB tarball formats.

2021-07-20 0.10.0
=================

- Bumped the minimum required Java version to 11.

- Added a new ``pid`` property to ``CrateTestServer``

- Migrated from Bintray to Maven Central. All new releases go to Maven Central
  from now on.

2020/06/09 0.9.1
================

* Fixed permission issue on CrateDB tarballs with bundled JDK on MacOS.

2020/03/20 0.9.0
================

* Added support for CrateDB tarballs with bundled JDK.

2020/02/05 0.8.0
================

* Upgraded dependencies to latest stable versions.

2019/05/20 0.7.0
================

 * Added support for CrateDB >= 4.x.

2019/02/14 0.6.4
================

 * Disabled distribution download caching when the "latest" version placeholder
   is used.

2019/02/14 0.6.3
================

 * Added support to start a test cluster from "latest" placeholder urls.

2018/04/24 0.6.2
================

 * Fixed used content-type header for BaseTest, CrateDB > 2.3.x won't accept
   requests with wrong content-type header anymore.

 * Changed bintray repository ``id`` from ``central` to ``bintray`` to avoid
   mixup with maven central repository.

2018/02/13 0.6.1
================

 * Fixed used content-type header, CrateDB > 2.3.x won't accept request with
   wrong content-type header anymore.

2017/07/03 0.6.0
================

 * Added switch for default settings depending on whether the CrateDB version
   used is before or after 2.0.0.

2017/01/13 0.5.0
================

 * added support for setting command line arguments.

2017/01/13 0.4.5
================

 * fix a bug caused all settings provided for CrateDB >= 1.0.X to be
   ignored.

2016/12/15 0.4.4
================

 * crate versions which does not support -Des any longer
   can be used in the crate java testing layer.

2016/10/19 0.4.3